Closed Bug 1778711 Opened 3 years ago Closed 3 years ago

gfxCharacterMap should use threadsafe refcounting

Categories

(Core :: Graphics: Text, defect, P3)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file tsan failure log
` ThreadSanitizer: data race /builds/worker/workspace/obj-build/dist/include/nsISupportsImpl.h:321:34 in operator--` See https://treeherder.mozilla.org/logviewer?job_id=383747647&repo=try&lineNumber=10217
Regressed by: 1777287
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5f2828c0cdaa gfxCharacterMap should use threadsafe refcounting. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Set release status flags based on info from the regressing bug 1777287

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: