Bug 1778711 - gfxCharacterMap should use threadsafe refcounting. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D151372