gfx/thebes/gfxFontEntry.cpp
@@ -54,11 +54,24 @@ using namespace mozilla;
 using namespace mozilla::gfx;
 using namespace mozilla::unicode;
 
-void gfxCharacterMap::NotifyReleased() {
-  if (mShared) {
-    gfxPlatformFontList::PlatformFontList()->RemoveCmap(this);
+nsrefcnt gfxCharacterMap::NotifyMaybeReleased() {
+  auto* pfl = gfxPlatformFontList::PlatformFontList();
+  pfl->Lock();
+
+  // Something may have pulled our raw pointer out of gfxPlatformFontList before
+  // we were able to complete the release.
+  if (mRefCnt > 0) {
+    pfl->Unlock();
+    return mRefCnt;
   }
+
+  if (mShared) {
+    pfl->RemoveCmap(this);
+  }
+
+  pfl->Unlock();
   delete this;
+  return 0;
 }
 
 gfxFontEntry::gfxFontEntry(const nsACString& aName, bool aIsStandardFace)
